# geez2ethiop

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
demo/: demo.ipynb
geez2ethiop/: __init__.py  geez2ethiop.py  mapping.py
latex-example/: build_image.sh  example.tex
tests/: test_geez2ethiop.py
