[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geez2ethiop"
version = "0.1.0"
description = "Convert Geez (Ethiopic) scripts into PDFLaTeX commands for the ethiop package"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hideyuki Tachibana" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
geez2ethiop = "geez2ethiop.geez2ethiop:main"

[project.urls]
Repository = "https://github.com/tachi-hi/geez2ethiop"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
